# sphinx-ultra

./: .gitignore  .packagename  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.lock.template  Cargo.toml  Cargo.toml.new  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  build.rs  build.sh  dev.sh  install.sh  rust-toolchain.toml  sphinx-ultra.yaml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: builder_benchmark.rs
docs/: QUICK_START.md  README.md
examples/: README.md
examples/basic/: README.md  index.rst  sphinx-ultra.yaml
scripts/: README.md  check-version.sh  pre-push  release.sh  setup.sh
src/: builder.rs  cache.rs  config.rs  directives.rs  document.rs  environment.rs  error.rs  extensions.rs  html_builder.rs  inventory.rs  lib.rs  main.rs  parser.rs  python_config.rs  roles.rs  search.rs  server.rs  template.rs  utils.rs  watcher.rs
static/: doctools.js  jquery.js  pygments.css  sphinx_highlight.js  theme.css
templates/: base.hbs  domainindex.html  genindex-single.html  genindex-split.html  genindex.html  layout.html  opensearch.xml  page.html  search.html
tests/: integration_test.rs
