[package]
name = "sphinx-ultra"
version = "0.1.2"
edition = "2021"
authors = ["Sphinx Ultra Team <sinan@alioglu.org>"]
description = "High-performance Rust-based Sphinx documentation builder for large codebases"
license = "MIT"
readme = "README.md"
homepage = "https://salioglu.github.io/sphinx-ultra"
repository = "https://github.com/salioglu/sphinx-ultra"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

# File system and I/O
walkdir = "2.0"
tempfile = "3.0"
glob = "0.3"

# String processing and templating
regex = "1.0"
handlebars = "6.3"
pulldown-cmark = "0.13"
syntect = "5.2"

# Performance and concurrency
rayon = "1.0"
dashmap = "6.1"
crossbeam = "0.8"
parking_lot = "0.12"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Hashing and caching
blake3 = "1.0"
lru = "0.16"

# HTML and web
html-escape = "0.2"
minifier = "0.3"
cssparser = "0.35"

# Compression and archives
flate2 = "1.0"
tar = "0.4"

# Binary serialization
bincode = "2.0"

# Template engine
minijinja = "2.12"

# Indexing and data structures
indexmap = "2.0"

# Base64 encoding
base64 = "0.22"

# Path utilities
pathdiff = "0.2"

# Configuration
config = "0.15"

# Python integration
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
pythonize = "0.24"

# TOML parsing (for pyproject.toml)
toml = "0.8"

# INI parsing (for setup.cfg)
ini = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.0"

[[bin]]
name = "sphinx-ultra"
path = "src/main.rs"

[[bench]]
name = "builder_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 2
